# Willr

./: .gitignore  README.md  pyproject.toml
willr/: __init__.py  auth.py  blog.py  db.py  schema.sql
willr/static/: style.css  wget-log
willr/templates/: base.html
willr/templates/auth/: login.html  register.html
willr/templates/blog/: create.html  index.html  update.html
